# pg_splade

./: .gitattributes  .typos.toml  Cargo.toml  README.md  pg_splade.control
assets/distill/: config.json  model.safetensors
assets/mini/: config.json  model.safetensors
src/: encode.rs  guc.rs  lib.rs  model.rs
src/datatype/: function.rs  mod.rs  sparsevec.rs  sparsevec_memory.rs
tests/sqllogictest/: encode.slt
